alter the text, add pictures in every section for the menu

--- a/index.html
+++ b/index.html
@@ -208,18 +208,21 @@
 
 		<!--Menu-->
 		<div class="menu">
-			<div class="menu-coffee">
-				<div class="menu-coffee-header mb-3">
-					<h2>
-						Coffee
-					</h2>
-					<p id="coffee-link">
-						Crazy? I was crazy once. They locked me in a room. A rubber room! A rubber room with rats,and rats make me crazy. 
-					</p>
-				</div>
-				<div class="menu-subheader mb-3">
-					<h3 class="text-settings-header">Drinks</h3>
-					<h1>Coffee & Cold Drinks</h1>
+            <div class="menu-coffee">
+                <div class="menu-coffee-header mb-3 size-to-fill">
+                    <div class="subhdr">
+                        <h2>
+                            Coffee
+                        </h2>
+                        <p id="coffee-link">
+                            As a Dutch brand, OUI hand selects and roasts only the finest aromatic Arabica and bold Robusta beans for our signature blends.
+                        </p>
+                    </div>
+                    <img src="img/pexels-chevanon-photography-302904-removebg-preview 1.png" alt="coffee-cup">
+                </div>
+                <div class="menu-subheader mb-3">
+                    <h3 class="text-settings-header">Drinks</h3>
+                    <h1>Coffee & Cold Drinks</h1>
 				</div>
 				<div class="menu-main-content mb-3">
 					<ul class="menu-items">
@@ -253,14 +256,17 @@
 				</div>          
 			</div>
 			<div class="menu-pain">
-				<div class="menu-pain-header mb-3">
-					<h2>
-						Pain
-					</h2>
-					<p id="pain-link">
-						Crazy? I was crazy once. They locked me in a room. A rubber room! A rubber room with rats,and rats make me crazy. 
-					</p>
-				</div>
+                <div class="menu-pain-header mb-3 size-to-fill">
+                    <div class="header-pain">
+                        <h2>
+                            Pain
+                        </h2>
+                        <p id="pain-link">
+                            Our high-quality OUI croissant. Experience unparalleled pastry excellence with our high-quality croissant, where buttery layer of perfection await in every bite.
+                        </p>
+                    </div>
+                    <img src="img/croissant.png" alt="croissant">
+                </div>
 				<div class="menu-subheader mb-3">
 					<h3 class="text-settings-header">Food</h3>
 					<h1>Croissant or Petit Pain</h1>
@@ -299,14 +305,17 @@
 				</div>
 			</div>
 			<div class="menu-sweets">
-				<div class="menu-sweets-header mb-3">
-					<h2>
-						Sweets
-					</h2>
-					<p id="sweets-link">
-						Crazy? I was crazy once. They locked me in a room. A rubber room! A rubber room with rats,and rats make me crazy. 
-					</p>
-				</div>
+                <div class="menu-sweets-header mb-3 size-to-fill">
+                    <div class="subhdr">
+                        <h2>
+                            Sweets
+                        </h2>
+                        <p id="sweets-link">
+                            Enjoy the greatest confections, each delectable OUI sweets a monument to unwavering quality and outstanding flavor.
+                        </p>
+                    </div>
+                    <img src="img/macaron.png" alt="macaron">
+                </div>
 				<div class="menu-subheader mb-3">
 					<h3 class="text-settings-header">Food</h3>
 					<h1>Sweets</h1>
@@ -341,14 +350,17 @@
 				</div>
 			</div>
 			<div class="menu tea">
-				<div class="menu-tea-header mb-3">
-					<h2>
-						Tea
-					</h2>
-					<p id="tea-link">
-						Crazy? I was crazy once. They locked me in a room. A rubber room! A rubber room with rats,and rats make me crazy. 
-					</p>
-				</div>
+                <div class="menu-tea-header mb-3 size-to-fill">
+                    <div class="header-pain">
+                        <h2>
+                            Tea
+                        </h2>
+                        <p id="tea-link">
+                            Savor the epitome of OUI tea craftsmanship with our high-quality blends, where each sip is a journey into the world of unparalleled flavor and refinement.
+                        </p>
+                    </div>
+                    <img src="img/tea.png" alt="tea">
+                </div>
 				<div class="menu-subheader mb-3">
 					<h3 class="text-settings-header">Drinks</h3>
 					<h1>Tea</h1>
@@ -399,140 +411,6 @@
 		<div class="location-text">Find a store</div>
 		<div id="map" class="location-map">.</div>
 	</div>
-	<article class="article">
-		<h2>Drinks</h2>
-		<h1 id="title-of-each-catagory">Coffee & Cold Drinks</h1>
-		<img src="img/coffee-illustration-bg.png" alt="coffee-illustration-bg">
-		<section id="Cappuccino">
-			<p>Cappuccino</p>
-			<p>Latte</p>
-			<p>Mocha</p>
-			<p>Espresso</p>
-			<p>Americano</p>
-			<p>Flat white</p>
-			<p>Home-made lemonade</p>
-			<p>Jus d’orange</p>
-			<p>Apple juice</p>
-			<p>Ice tea</p>
-			<p>Flat water</p>
-			<p>Sparkling water</p>
-		</section>
-		<section id="price-for-coffee">
-			<p>€1,30</p>
-			<p>€2,30</p>
-			<p>€2,80</p>
-			<p>€3,30</p>
-			<p>€4,50</p>
-			<p>€4,70</p>
-			<p>€1,30</p>
-			<p>€2,30</p>
-			<p>€2,80</p>
-			<p>€3,30</p>
-			<p>€4,50</p>
-			<p>€4,70</p>
-		</section>
-	</article>
-	<div class="background-for-menu">
-		<article class="article" id="light-blue-bg">
-			<h1>Pain</h1>
-			<p>Our high-quality OUI croissant. Experience unparalleled pastry excellence with our high-quality croissant, where buttery layer of perfection await in every bite.</p>
-			<img src="img/croissant.png" alt="croissant-bg">
-		</article>
-	</div>
-	<article class="article">
-		<h2>Food</h2>
-		<h1 id="title-of-croissant">Croissant or Petit Pain</h1>
-		<img src="img/coffee-illustration-bg.png" alt="coffee-illustration-bg">
-		<section id="Natural">
-			<p>Natural/ plain</p>
-			<p>Butter</p>
-			<p>Herb butter</p>
-			<p>Jam or Nutella</p>
-			<p>Brie or camembert</p>
-			<p>Cheese with walnuts</p>
-			<p>Cream cheese</p>
-			<p>Soft goat cheese</p>
-			<p>Smoked salmon</p>
-			<p>Tuna salad</p>
-			<p>Egg salad</p>
-			<p>Hummus</p>
-			<p>French ragout</p>
-		</section>
-		<section id="price-for-croissant">
-			<p>€1,30</p>
-			<p>€2,30</p>
-			<p>€2,80</p>
-			<p>€3,30</p>
-			<p>€4,50</p>
-			<p>€4,70</p>
-			<p>€4,80</p>
-			<p>€4,80</p>
-			<p>€5,80</p>
-			<p>€4,80</p>
-			<p>€4,80</p>
-			<p>€4,60</p>
-			<p>€4,70</p>
-		</section>
-	</article>
-	<div class="background-for-menu">
-		<article class="article" id="yellow-bg">
-			<h1>Sweet</h1>
-			<p>Enjoy the greatest confections, each delectable OUI sweets a monument to unwavering quality and outstanding flavor.</p>
-			<img src="img/macaron.png" alt="macaron-bg">
-		</article>
-	</div>
-	<article class="article">
-		<h2>Food</h2>
-		<h1 id="title-of-sweet">Sweet</h1>
-		<img src="img/coffee-illustration-bg.png" alt="coffee-illustration-bg">
-		<section id="Macaron">
-			<p>Macaron (3 pieces)</p>
-			<small>Vanilla</small>
-			<small>Strawberries and cream</small>
-			<small>Lemon Curd</small>
-			<small>Cookies and Cream</small>
-			<small>Blueberry</small>
-			<small>Chocolate</small>
-			<small>Mocha/Coffee</small>
-			<p>Paris-Brest</p>
-			<p>Cream Puffs</p>
-			<p>Éclair</p>
-			<p>Millefeuille</p>
-		</section>
-		<section id="price-for-sweet">
-			<p>€6,00</p>
-			<div id="sub-price-for-sweet">
-			<p>€3,90</p>
-			<p>€3,90</p>
-			<p>€4,70</p>
-			<p>€4,70</p>
-			</div>
-		</section>
-	</article>
-	<div class="background-for-menu">
-		<article class="article" id="blue-bg">
-			<h1>Pain</h1>
-			<p>Our high-quality OUI croissant. Experience unparalleled pastry excellence with our high-quality croissant, where buttery layer of perfection await in every bite.</p>
-			<img src="img/tea.png" alt="tea-bg">
-		</article>
-	</div>
-	<article class="article">
-		<h2>Drinks</h2>
-		<h1 id="title-of-tea">Tea</h1>
-		<img src="img/coffee-illustration-bg.png" alt="coffee-illustration-bg">
-		<section id="tea">
-			<p>Tea</p>
-			<small>Black tea</small>
-			<small>Green tea</small>
-			<small>Herbal tea</small>
-			<small>Jasmin tea</small>
-			<small>Rooibos</small>
-		</section>
-		<section id="price-for-tea">
-			<p>€4,80</p>
-		</section>
-	</article>
-	<!-- WHO DID THE FOOTER DRAG YOUR PART AWAY OF MY TEA MENU AND DELETE <BR> IN YOUR CODE, THE FOOTER SHOULD BE OUT OF THE BODY-->
 	<footer>
 		<p class="font-circular">Contact Us</p>
 		<p class="font-circular">Email: marcel.baron@nhlstenden.com   Phone: +31 (0) 6-82588713   Adress: C, Raadhuisplein 7811 AP Emmen</p>
