fixed products rescaling

--- a/index.html
+++ b/index.html
@@ -58,6 +58,24 @@
 					class="main-grid-image"
 			/>
 		</div>
+
+		<!--Anastasiia-->
+		<div class="container">
+			
+			<div class="grid-item1">
+				<img src="img/coffee01.png" alt="products1">
+			</div>
+			<div class="grid-item2">
+				<img src="img/coffee02.png" alt="products2">
+			</div>
+			<div class="grid-item3">
+				<img src="img/coffee03.png" alt="products3">
+			</div>
+			<div class="grid-item4">
+				<img src="img/coffee04.png" alt="products4">
+			</div>
+		</div>
+		<!--Anastasiia end-->
 		
 		<!--About us part two-->
 		<div id="about-us2">
@@ -185,12 +203,12 @@
 				<div class="menu-main-content mb-3">
 					<ul class="menu-items">
 						<li>Macaron (3 pieces)</li>
-						<li class="subcategory">Vanilla</li>
-						<li class="subcategory">Lemon Curd</li>
-						<li class="subcategory">Cookies and Cream</li>
-						<li class="subcategory">Blueberry</li>
-						<li class="subcategory">Chocolate</li>
-						<li class="subcategory">Mocha/Coffee</li>
+						<li class="subcategory"><h2>Vanilla</h2></li>
+						<li class="subcategory"><h2>Lemon Curd</h2></li>
+						<li class="subcategory"><h2>Cookies and Cream</h2></li>
+						<li class="subcategory"><h2>Blueberry</h2></li>
+						<li class="subcategory"><h2>Chocolate</h2></li>
+						<li class="subcategory"><h2>Mocha/Coffee</h2></li>
 						<li>Paris-Brest</li>
 						<li>Cream Puffs</li>
 						<li>Eclair</li>
@@ -227,11 +245,11 @@
 				<div class="menu-main-content mb-3">
 					<ul class="menu-items">
 						<li>Tea</li>
-						<li class="subcategory">Black Tea</li>
-						<li class="subcategory">Green Tea</li>
-						<li class="subcategory">Herbal Tea</li>
-						<li class="subcategory">Jasmine Tea</li>
-						<li class="subcategory">Rooibos</li>
+						<li class="subcategory"><h2>Black Tea<h2></li>
+						<li class="subcategory"><h2>Green Tea<h2></li>
+						<li class="subcategory"><h2>Herbal Tea<h2></li>
+						<li class="subcategory"><h2>Jasmine Tea<h2></li>
+						<li class="subcategory"><h2>Rooibos<h2></li>
 					</ul>
 					<ul class="menu-prices">
 						<li>€ 4,80</li>
