button links, fixed footer, padding location (again)

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 					<a href="#tea-link">Tea</a>
 				</div>
 			</div>
-			<a href="#" class="header-text font-circular-bold text-settings"> About Us</a>
-			<a href="#map" class="header-text font-circular-bold dropdown text-settings"> Locations</a>
+			<a href="#about-us-link" class="header-text font-circular-bold text-settings"> About Us</a>
+			<a href="#map-link" class="header-text font-circular-bold dropdown text-settings"> Locations</a>
 		</div>
 	</header>
 	<main class="main-grid">
@@ -385,36 +385,33 @@
 				</div>
 			</div>
 		</div>
-	</main>
 	<!--About us part two-->
-	<div id="about-us2">
-		<div id="img">
-			<img id="about_us_img" src="img/cappuccino-about-us-img.jpg" alt="cappuccino">
-		</div>
-		<div id="about-us-font">
-			<h2>
-				What is the story behind OUI?
-			</h2>
-			<p>
-				In 2023, Marcel Baron, founded the café OUI with a lifelong journey of bringing fine coffee
-				flavours and desserts designated for all ages.<br>
-				He set the mission of “bringing high-quality and affordable products to everyone
-				around the world”.
-				Took a long time through thick and thin, to
-				begin the production of our core ingredients independently.
-			</p>
+	<div id="about-us-link">
+		<div id="about-us2">
+			<div id="img">
+				<img id="about_us_img" src="img/cappuccino-about-us-img.jpg" alt="cappuccino">
+			</div>
+			<div id="about-us-font">
+				<h2>
+					What is the story behind OUI?
+				</h2>
+				<p>
+					In 2023, Marcel Baron, founded the café OUI with a lifelong journey of bringing fine coffee
+					flavours and desserts designated for all ages.<br>
+					He set the mission of “bringing high-quality and affordable products to everyone
+					around the world”.
+					Took a long time through thick and thin, to
+					begin the production of our core ingredients independently.
+				</p>
+			</div>
 		</div>
 	</div>
-
+	</main>
 	<!--LOCATION-->
 	<div class="location">
 		<div class="location-text">Find a store</div>
-		<div id="map" class="location-map">.</div>
+		<div id="map-link" class="location-map">.</div>
 	</div>
-	<footer>
-		<p class="font-circular">Contact Us</p>
-		<p class="font-circular">Email: marcel.baron@nhlstenden.com   Phone: +31 (0) 6-82588713   Adress: C, Raadhuisplein 7811 AP Emmen</p>
-	</footer>
 	<footer class="font-circular">
 		<div class="footer-left">
 		<p>
