add padding for about us 2 with 50dvh, capitalize some words

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				</div>
 			</div>
 			<a href="#" class="header-text font-circular-bold text-settings"> About Us</a>
-			<a href="#map" class="header-text font-circular-bold dropdown text-settings"> Locations</a>
+			<a href="#map" class="header-text font-circular-bold dropdown text-settings"> Location</a>
 		</div>
 	</header>
 	<main class="main-grid">
@@ -70,7 +70,7 @@
 			</h1>
 			<div id="product_row1">
 				<div class="product">
-					<div class="tag">coffee</div>
+					<div class="tag">Coffee</div>
 					<img class="product_img" src="img/coffee (1).jpg" alt="Cappuccino">
 					<p class="product_name">Cappuccino</p>
 					<div class="price_raiting">
@@ -80,7 +80,7 @@
 					</div>
 				</div>
 				<div class="product">
-					<div class="tag">coffee</div>
+					<div class="tag">Coffee</div>
 					<img class="product_img" src="img/coffee (2).jpg" alt="Latte">
 					<p class="product_name">Latte</p>
 					<div class="price_raiting">
@@ -90,7 +90,7 @@
 					</div>
 				</div>
 				<div class="product">
-					<div class="tag">coffee</div>
+					<div class="tag">Coffee</div>
 					<img class="product_img" src="img/coffee (3).jpg" alt="Mocha">
 					<p class="product_name">Mocha</p>
 					<div class="price_raiting">
@@ -100,7 +100,7 @@
 					</div>
 				</div>
 				<div class="product">
-					<div class="tag">coffee</div>
+					<div class="tag">Coffee</div>
 					<img class="product_img" src="img/coffee (4).jpg" alt="Espresso">
 					<p class="product_name">Espresso</p>
 					<div class="price_raiting">
