fixed images not loading

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						Our Products
 					</h1>
 				</div>
-				<img src="img/illustrations_red_coffee.png" alt="red coffee cup" class="products-header-img"/>
+				<img src="img/illustrations_red_coffee.svg" alt="red coffee cup" class="products-header-img"/>
 			</div>
 			<div class="products-featured">
 				<div class="products-featured-item">
@@ -272,7 +272,7 @@
                             As a Dutch brand, OUI hand selects and roasts only the finest aromatic Arabica and bold Robusta beans for our signature blends.
                         </p>
                     </div>
-                    <img src="img/pexels-chevanon-photography-302904-removebg-preview 1.png" alt="coffee-cup">
+                    <img src="img/Cappuccino_Coffee_cup.png" alt="coffee-cup">
                 </div>
                 <div class="menu-subheader mb-3">
                     <h3 class="text-settings-header">Drinks</h3>
