added buttons to about us

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
 				Improving the recipe so you can enjoy the fine taste and variety of our coffee and
 				once you try them, you too will experience their fine flavor.
 			</p>
+			<div class="about-us-buttons">
+				<a href="#about-us-link" class="button">Learn More</a>
+				<a href="#coffee-link" class="button">Menu</a>
+			</div>
 		</div>
 		<div class="main-image">
 			<img
