--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                             As a Dutch brand, OUI hand selects and roasts only the finest aromatic Arabica and bold Robusta beans for our signature blends.
                         </p>
                     </div>
-                    <img src="img/pexels-chevanon-photography-302904-removebg-preview 1.png" alt="coffee-cup">
+                    <img src="img/Cappuccino_Coffee_cup.png" alt="coffee-cup">
                 </div>
                 <div class="menu-subheader mb-3">
                     <h3 class="text-settings-header">Drinks</h3>
