"fixed button links" (again)

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
               <ul class="menu-prices">
                 <li class="text-settings">€ 4,80</li>
                 <li class="subcategory">‎</li>
-                <li class="subcategory">‎</li>
+                <li id="about-us-link" class="subcategory">‎</li>
                 <li class="subcategory">‎</li>
                 <li class="subcategory">‎</li>
                 <li class="subcategory">‎</li>
@@ -498,34 +498,32 @@
           </div>
         </div>
         <!--About us part two-->
-        <div id="about-us-link">
-          <div id="about-us2">
-            <div id="img">
-              <img
-                id="about_us_img"
-                src="img/cappuccino-about-us-img.jpg"
-                alt="cappuccino"
-              />
-            </div>
-            <div id="about-us-font">
-              <h2>What is the story behind OUI?</h2>
-              <p>
-                In 2023, Marcel Baron, founded the café OUI with a lifelong
-                journey of bringing fine coffee flavours and desserts designated
-                for all ages.<br />
-                He set the mission of “bringing high-quality and affordable
-                products to everyone around the world”. Took a long time through
-                thick and thin, to begin the production of our core ingredients
-                independently.
-              </p>
-            </div>
+        <div id="about-us2">
+          <div id="img">
+            <img
+              id="about_us_img"
+              src="img/cappuccino-about-us-img.jpg"
+              alt="cappuccino"
+            />
+          </div>
+          <div id="about-us-font">
+            <h2>What is the story behind OUI?</h2>
+            <p>
+              In 2023, Marcel Baron, founded the café OUI with a lifelong
+              journey of bringing fine coffee flavours and desserts designated
+              for all ages.<br />
+              He set the mission of “bringing high-quality and affordable
+              products to everyone around the world”. Took a long time through
+              thick and thin, to begin the production of our core ingredients
+              independently.
+            </p>
           </div>
         </div>
       </main>
       <!--LOCATION-->
-      <div class="location">
+      <div class="location" id="map-link">
         <div class="location-text">Find a store</div>
-        <div id="map-link" class="location-map">.</div>
+        <div class="location-map">.</div>
       </div>
       <footer class="font-circular">
         <div class="footer-left">
@@ -533,9 +531,7 @@
         </div>
         <div class="footer-right">
           <p>
-            Opening times:<br />Mon 10:00 to 21:00 Tue 10:00 to 21:00 Wed 10:00
-            to 21:00 Thu 10:00 to 21:00 Fri 10:00 to 21:00 Sat 15:00 to 22:00
-            Sun 15:00 to 22:00
+            Opening times:<br />Tue 10:00 to 21:00 Wed 10:00 to 21:00 Thu 10:00 to 21:00 Fri 10:00 to 21:00 Sat 15:00 to 22:00 Sun 15:00 to 22:00
           </p>
         </div>
       </footer>
