change the text in about us 1 to the one in the design

--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
         <div class="main-subgrid pl-5">
           <h1>A coffee shop with a French twist!</h1>
           <p class="font-circular text-settings">
-            Improving the recipe so you can enjoy the fine taste and variety of
-            our coffee and once you try them, you too will experience their fine
-            flavor.
+            Since the beginning, our goal has been to serve and uplift society by enriching human connections and social togetherness.
           </p>
         </div>
         <div class="main-image">
