added a background animation to liven up the website a bit

--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
     </div>
     <!-- THE MAIN CONTENT -->
     <div id="main-content">
+      <ul class="circles">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
       <header class="bg-yellow grid-header mb-3">
         <a href="#">
           <img src="img/main-logo.png" alt="OUI" class="logo-image" />
