minor bug fixes and code refactoring, also changed the text in the offers section

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 class="products-featured-img"
               />
               <div class="featured-bottom">
-                <p>Latte</p>
+                <p>Cappuccino</p>
                 <div class="pricing">
                   <div>
                     <s>€ 2,00</s>
@@ -126,8 +126,8 @@
                 <p>Latte</p>
                 <div class="pricing">
                   <div>
-                    <s>€ 2,00</s>
-                    <p>€ 1,30</p>
+                    <s>€ 3,00</s>
+                    <p>€ 2,30</p>
                   </div>
                   <p>&#11088;&#11088;&#11088;&#11088;&#11088;</p>
                 </div>
@@ -141,11 +141,11 @@
                 class="products-featured-img"
               />
               <div class="featured-bottom">
-                <p>Latte</p>
+                <p>Mocha</p>
                 <div class="pricing">
                   <div>
-                    <s>€ 2,00</s>
-                    <p>€ 1,30</p>
+                    <s>€ 3,00</s>
+                    <p>€ 2,80</p>
                   </div>
                   <p>&#11088;&#11088;&#11088;&#11088;&#11088;</p>
                 </div>
@@ -159,11 +159,11 @@
                 class="products-featured-img"
               />
               <div class="featured-bottom">
-                <p>Latte</p>
+                <p>Espresso</p>
                 <div class="pricing">
                   <div>
-                    <s>€ 2,00</s>
-                    <p>€ 1,30</p>
+                    <s>€ 3,30</s>
+                    <p>€ 3,00</p>
                   </div>
                   <p>&#11088;&#11088;&#11088;&#11088;&#11088;</p>
                 </div>
@@ -177,11 +177,11 @@
                 class="products-featured-img"
               />
               <div class="featured-bottom">
-                <p>Latte</p>
+                <p>Croissant (jam)</p>
                 <div class="pricing">
                   <div>
-                    <s>€ 2,00</s>
-                    <p>€ 1,30</p>
+                    <s>€ 4,00</s>
+                    <p>€ 3,30</p>
                   </div>
                   <p>&#11088;&#11088;&#11088;&#11088;&#11088;</p>
                 </div>
@@ -195,7 +195,7 @@
                 class="products-featured-img"
               />
               <div class="featured-bottom">
-                <p>Latte</p>
+                <p>Croissant</p>
                 <div class="pricing">
                   <div>
                     <s>€ 2,00</s>
@@ -213,11 +213,11 @@
                 class="products-featured-img"
               />
               <div class="featured-bottom">
-                <p>Latte</p>
+                <p>Macaron (blueberry)</p>
                 <div class="pricing">
                   <div>
-                    <s>€ 2,00</s>
-                    <p>€ 1,30</p>
+                    <s>€ 10,00</s>
+                    <p>€ 6,00</p>
                   </div>
                   <p>&#11088;&#11088;&#11088;&#11088;&#11088;</p>
                 </div>
@@ -231,11 +231,11 @@
                 class="products-featured-img"
               />
               <div class="featured-bottom">
-                <p>Latte</p>
+                <p>Macaron (lemon curd)</p>
                 <div class="pricing">
                   <div>
-                    <s>€ 2,00</s>
-                    <p>€ 1,30</p>
+                    <s>€ 10,00</s>
+                    <p>€ 6,00</p>
                   </div>
                   <p>&#11088;&#11088;&#11088;&#11088;&#11088;</p>
                 </div>
@@ -255,54 +255,36 @@
           </div>
           <div class="offer-items">
             <div class="products-featured-item">
-              <p class="products-featured-top">Coffee</p>
+              <p class="products-featured-top">Tea</p>
               <img
-                src="img/coffee (1).jpg"
+                src="img/tea (3).jpg"
                 alt="coffee"
                 class="products-featured-img"
               />
               <div class="featured-bottom">
-                <p>Latte</p>
+                <p>Black tea</p>
                 <div class="pricing">
                   <div>
-                    <s>€ 2,00</s>
-                    <p>€ 1,30</p>
+                    <s>€ 5,00</s>
+                    <p>€ 4,80</p>
                   </div>
                   <p>&#11088;&#11088;&#11088;&#11088;&#11088;</p>
                 </div>
               </div>
             </div>
             <div class="products-featured-item">
-              <p class="products-featured-top">Coffee</p>
+              <p class="products-featured-top">Cold drinks</p>
               <img
-                src="img/coffee (2).jpg"
+                src="img/tea (1).jpg"
                 alt="coffee"
                 class="products-featured-img"
               />
               <div class="featured-bottom">
-                <p>Latte</p>
+                <p>Ice tea</p>
                 <div class="pricing">
                   <div>
-                    <s>€ 2,00</s>
-                    <p>€ 1,30</p>
-                  </div>
-                  <p>&#11088;&#11088;&#11088;&#11088;&#11088;</p>
-                </div>
-              </div>
-            </div>
-            <div class="products-featured-item">
-              <p class="products-featured-top">Coffee</p>
-              <img
-                src="img/coffee (3).jpg"
-                alt="coffee"
-                class="products-featured-img"
-              />
-              <div class="featured-bottom">
-                <p>Latte</p>
-                <div class="pricing">
-                  <div>
-                    <s>€ 2,00</s>
-                    <p>€ 1,30</p>
+                    <s>€ 4,00</s>
+                    <p>€ 3,30</p>
                   </div>
                   <p>&#11088;&#11088;&#11088;&#11088;&#11088;</p>
                 </div>
@@ -316,7 +298,25 @@
                 class="products-featured-img"
               />
               <div class="featured-bottom">
-                <p>Latte</p>
+                <p>Americano</p>
+                <div class="pricing">
+                  <div>
+                    <s>€ 5,00</s>
+                    <p>€ 4,30</p>
+                  </div>
+                  <p>&#11088;&#11088;&#11088;&#11088;&#11088;</p>
+                </div>
+              </div>
+            </div>
+            <div class="products-featured-item">
+              <p class="products-featured-top">Tea</p>
+              <img
+                src="img/tea (2).jpg"
+                alt="coffee"
+                class="products-featured-img"
+              />
+              <div class="featured-bottom">
+                <p>Rooibos</p>
                 <div class="pricing">
                   <div>
                     <s>€ 2,00</s>
