add icon, delete "s" in locations, add responsive png background to offered products

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
     <title>OUI</title>
+    <link rel="icon" href="img/main-logo.png">
   </head>
   <body class="bg-yellow">
     <!-- THE LOAD ANIMATION -->
@@ -64,7 +65,7 @@
             href="#map-link"
             class="header-text font-circular-bold dropdown text-settings"
           >
-            Locations</a
+            Location</a
           >
         </div>
       </header>
@@ -326,6 +327,9 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="Yellow-bg">
+            <img src="img/yellow-bg.png" alt="Yellow background" id="Yellow">
           </div>
         </div>
 
