remove border from the map

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
       </main>
       <!--LOCATION-->
       <div class="location" id="map-link">
-        <div class="location-text">Find a store</div>
+        <div class="location-text"><strong>Find a store</strong></div>
         <div class="mapouter">
           <div class="gmap_canvas">
             <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=Raadhuisplein,%207811%20AP%20Emmen&t=&z=13&ie=UTF8&iwloc=&output=embed">
